[package]
name = "ws-tox-protocol"
version = "0.1.0"
authors = ["Сухарик <suhr@i2pmail.org>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# wasm-typescript-definition = { git = "https://github.com/tcr/wasm-typescript-definition.git" }
# wasm-bindgen = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rstox = { git = "https://github.com/tox-rs/rstox.git" }
