[package]
name = "ws-tox-protocol"
version = "0.1.0"
authors = ["Сухарик <suhr@i2pmail.org>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
base64 = "0.10"
base64-serde = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rstox = { git = "https://github.com/tox-rs/rstox.git" }
